# oop-2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  helper-functions.cpp  helper-functions.h  input-output.cpp  input-output.h  main-c-arrays.cpp  main.cpp  new-data-types.h
doxygen/html/: _r_e_a_d_m_e_8md.html  _student_test_8cpp.html  _student_test_8cpp.js  _student_test_8cpp__incl.map  _student_test_8cpp__incl.md5  annotated.html  class_human-members.html  class_human.html  class_human.js  class_human__inherit__graph.map  class_human__inherit__graph.md5  class_student-members.html  class_student.html  class_student.js  class_student__coll__graph.md5  class_student__inherit__graph.map  class_timer-members.html  class_timer.html  classes.html  dir_000001_000000.html  dir_000001_000002.html  dir_000002_000000.html  dir_000002_000001.html  dir_000003_000000.html  dir_000004_000000.html  dir_000004_000001.html  dir_000004_000002.html  dir_000004_000003.html  dir_000004_000005.html  dir_000005_000000.html  dir_000005_000001.html  dir_000006_000004.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.js  dir_018e9aafb459e6e1a4953404cb0c0b1d_dep.map  dir_018e9aafb459e6e1a4953404cb0c0b1d_dep.md5  dir_0c26bd22f254302c4dfbaa95bf527e9d.html  dir_0c26bd22f254302c4dfbaa95bf527e9d.js  dir_0c26bd22f254302c4dfbaa95bf527e9d_dep.map  (+117 more)
src/: CMakeLists.txt  helper-functions.cpp  helper-functions.h  input-output.cpp  input-output.h  main.cpp  new-data-types.h  timer.h
src/classes/: student.cpp  student.h  (+1 more)
tst/: CMakeLists.txt  StudentTest.cpp  main.cpp
(+38 files in other folders)
